instructions on how to use docker on windows

--- a/apache.conf
+++ b/apache.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 ServerAdmin me@mydomain.com
-DocumentRoot /var/www/site
+DocumentRoot /var/www/site/app
  
-<Directory /var/www/site/>
+<Directory /var/www/site/app>
 	Options +Indexes +FollowSymLinks +MultiViews
 	AllowOverride All
 	Order deny,allow
